<resources>
    <string name="app_name">MediaFiles</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Add Gas</string>


    <!-- Login Activity -->
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_failed_toast">Login Failed</string>

    <!-- Stats Banner -->
    <string name="run_count_label">Run Count: </string>
    <string name="added_count_label">Items Added: </string>

    <!-- Discovery Activity -->
    <string name="unified_item_button_label">Unified Item Dao: </string>
    <string name="local_item_button_label">Local Item Dao: </string>
    <string name="signout_label">Sign Out</string>

    <!-- Item Layout -->
    <string name="path_label">Path: </string>
    <string name="unified_id_label">Unified Id: </string>
    <string name="added_label">Added: </string>
    <string name="taken_label">Taken: </string>
    <string name="modified_label">Modified: </string>
    <string name="uploaded_label">Uploaded: </string>
    <string name="type_label">Type: </string>
    <string name="local_count_label">Local Items: </string>
    <string name="cloud_count_label">Cloud Items: </string>
    <string name="dedupe_stage_label">Dedupe Stage: </string>

    <!-- Fill Gas Item Layout -->
    <string name="gas_station_label">Gas Station: </string>
    <string name="gas_added_label">Added Date: </string>
    <string name="gas_record_label">Record Date: </string>
    <string name="gas_modified_label">Modified Date: </string>
    <string name="gas_volume_label">Volume: </string>
    <string name="gas_distance_label">Distance: </string>
    <string name="gas_price_label">Price: </string>
    <string name="add_one_record">Add One Record</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Cancel</string>

    <string name="white_space"> </string>

</resources>
