<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!-- Local Id -->
    <TextView
        android:id="@+id/itemId"
        android:layout_width="@dimen/item_list_id_width"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/item_list_field_margin_end"
        android:gravity="start"/>

    <!-- Local Item Fields -->
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:orientation="vertical">

            <!-- First row is just the path since it is usually long -->
            <LinearLayout
                android:id="@+id/itemTopRow"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_list_row_height"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/gas_added_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_label_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/gasAddedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/item_list_field_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:text="@string/gas_volume_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_label_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/gasVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start"/>
            </LinearLayout>

            <!-- Second row contains unified id and dates -->
            <LinearLayout
                android:id="@+id/itemSecondRow"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_list_row_height"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/gas_distance_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_label_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/gasDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/item_list_field_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:text="@string/gas_station_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_label_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/gasStation"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_label_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:text="@string/gas_price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_label_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/gasPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/item_list_field_margin_end"
                    android:gravity="start"/>

            </LinearLayout>

            <!-- Third row contains record dates -->
            <LinearLayout
                android:id="@+id/itemThirdRow"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_list_row_height"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/gas_record_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_label_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/gasRecordDate"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start"/>

            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
