<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <!-- Local Id -->
    <TextView
        android:id="@+id/itemId"
        android:layout_width="@dimen/item_list_id_width"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/item_list_field_margin_end"
        android:gravity="start"/>

    <!-- Local Item Fields -->
    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/default_bottom_padding"
            android:orientation="vertical">

            <!-- First row is just the path since it is usually long -->
            <LinearLayout
                android:id="@+id/itemTopRow"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_list_row_height"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/path_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_label_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/itemPath"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start"/>
            </LinearLayout>

            <!-- Second row contains unified id and dates -->
            <LinearLayout
                android:id="@+id/itemBottomRow"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_list_row_height"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/unified_id_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_label_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/unifiedId"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/item_list_field_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:text="@string/added_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_label_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/itemAdded"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/item_list_field_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:text="@string/taken_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_label_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/itemTaken"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/item_list_field_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:text="@string/modified_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/default_label_margin_end"
                    android:gravity="start"/>

                <TextView
                    android:id="@+id/itemModified"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="start"/>

            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>
