<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddGasRecordActivity">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/horizontal_guideline_BottomBar"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline_summary"
        >

            <!-- Input Parameter Zone -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/default_bottom_padding"
                android:orientation="vertical">

                <!-- First row contains  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/default_bottom_padding"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <TextView
                        android:text="@string/gas_added_label"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:textStyle="bold|italic"

                        android:layout_marginEnd="@dimen/default_label_margin_end"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/gasAddedDateText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:layout_marginEnd="@dimen/item_list_field_margin_end"
                        android:gravity="center_vertical"
                        android:autofillHints=""
                        android:inputType="date" />

                    <Button
                        android:id="@+id/gasAddedDateButton"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/item_list_field_margin_end"
                        android:gravity="center_vertical"
                        android:autofillHints=""
                        />
                </LinearLayout>

                <!-- Second row contains  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/default_bottom_padding"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <TextView
                        android:text="@string/gas_station_label"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:textStyle="bold|italic"
                        android:layout_marginEnd="@dimen/default_label_margin_end"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/gasStationText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:layout_marginEnd="@dimen/item_list_field_margin_end"
                        android:gravity="center_vertical"
                        android:autofillHints=""
                        android:inputType="text" />
                </LinearLayout>

                <!-- No.3 row contains  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/default_bottom_padding"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <TextView
                        android:text="@string/gas_volume_label"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:textStyle="bold|italic"
                        android:layout_marginEnd="@dimen/default_label_margin_end"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/gasVolumeText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:layout_marginEnd="@dimen/item_list_field_margin_end"
                        android:gravity="center_vertical"
                        android:autofillHints=""
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <!-- No.4 row contains  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/default_bottom_padding"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <TextView
                        android:text="@string/gas_distance_label"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:textStyle="bold|italic"
                        android:layout_marginEnd="@dimen/default_label_margin_end"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/gasDistanceText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:layout_marginEnd="@dimen/item_list_field_margin_end"
                        android:gravity="center_vertical"
                        android:autofillHints=""
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <!-- No.5 row contains  -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/default_bottom_padding"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <TextView
                        android:text="@string/gas_price_label"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:textStyle="bold|italic"
                        android:layout_marginEnd="@dimen/default_label_margin_end"
                        android:gravity="center_vertical"/>

                    <EditText
                        android:id="@+id/gasPriceText"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:layout_marginEnd="@dimen/item_list_field_margin_end"
                        android:gravity="center_vertical"
                        android:autofillHints=""
                        android:inputType="numberDecimal" />
                </LinearLayout>
            </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/actions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline_BottomBar"
        >

        <Button
            android:id="@+id/addGasRecordSaveButton"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_gravity="center_vertical"
            android:text="@string/save_label" />

        <Button
            android:id="@+id/addGasRecordCancelButton"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_gravity="center_vertical"
            android:text="@string/cancel_label" />

    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_BottomBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>